--- a/css/style2.css
+++ b/css/style2.css
@@ -1,7 +1,9 @@
-body
-		{
-			background-color: khaki;
-		}
+body 
+{
+	background-color: tan;
+}
+
+
 ul
 {
 	list-style-type: none;
@@ -9,9 +11,9 @@ ul
 	margin-right: auto;
 	padding: 40px; 40px;
 	overflow: hidden;
-	background-color: whitesmoke;
+	background-color: sienna;
 	width: 100%;
-	height: 30px;
+	height: 10px;
 }
 
 li
@@ -22,11 +24,10 @@ li
 li a
 {
 	display: ruby-base-container;
-	color: black;
+	color: antiquewhite;
 	text-align: center;
-	padding: 15px;
+	padding: 30px;
 	text-decoration: none;
-	font-family: monospace;
-	font-size: 25px;
+	font-family: CalistoMT;
+	font-size: 20px;
 }
-
