--- a/css/style2.css
+++ b/css/style2.css
@@ -30,4 +30,15 @@ li a
 	text-decoration: none;
 	font-family: CalistoMT;
 	font-size: 20px;
+	
 }
+
+a:hover 
+{
+	background-color: wheat;
+	color: black;
+}
+
+
+
+
