--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ ul
 	overflow: hidden;
 	background-color: sienna;
 	width: 100%;
-	height: 20px;
+	height: 10px;
 }
 
 li
@@ -26,7 +26,15 @@ li a
 	text-align: center;
 	padding: 30px;
 	text-decoration: none;
-	font-family: monospace;
+	font-family: calistoMT;
 	font-size: 20px;
 }
+
+a:hover 
+{
+	background-color: wheat;
+	color: black;
+}
+
+
 
