--- a/css/style5.css
+++ b/css/style5.css
@@ -43,3 +43,10 @@ img
 	border-color: beige;
 	border-width: 10;
 }
+
+img
+{
+	border-style: solid;
+	border-color: saddlebrown;
+	border-width: 5px;
+}
