--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,17 @@
 body
 		{
-			background-color: tan;
+			background-color: maroon;
 		}
 ul
 {
 	list-style-type: none;
 	margin-left: auto;
 	margin-right: auto;
-	padding: 40px; 40px;
+	padding: 30px; 30px;
 	overflow: hidden;
-	background-color: sienna;
-	width: 100%;
-	height: 10px;
+	background-color: black;
+	width: 65%;
+	height: 5px;
 }
 
 li
@@ -32,7 +32,7 @@ li a
 
 a:hover 
 {
-	background-color: wheat;
+	background-color:seashell ;
 	color: black;
 }
 
