--- a/css/style1.css
+++ b/css/style1.css
@@ -1,12 +1,14 @@
 body 
 {
-	background-color: tan;
+	background-color: maroon;
+
 }
 
 h1
 {
 	font-family: georgia;
 	font-size: 30 px;
+	color: white;
 	
 	
 
@@ -17,6 +19,7 @@ p
 	font-family: centuryGothic;
 	font-size: 20px;
 	display: ruby-base-container;
+	color: white;
 	
 }
 
@@ -25,11 +28,11 @@ ul
 	list-style-type: none;
 	margin-left: auto;
 	margin-right: auto;
-	padding: 40px; 40px;
+	padding: 30px; 30px;
 	overflow: hidden;
-	background-color: sienna;
-	width: 100%;
-	height: 10px;
+	background-color: black;
+	width: 65%;
+	height: 5px;
 }
 
 li
@@ -46,26 +49,30 @@ li a
 	text-decoration: none;
 	font-family: CalistoMT;
 	font-size: 20px;
+	color: white;
 }
 
 dt 
 {
 	font-family: georgia;
 	text-align: center;
+	color: white;
 }
 
 dd
 {
 	font-family: centurygothic;
 	text-align: center;
+	color: white;
 
 }
 
-a:hover 
+li a:hover 
 {
-	background-color: wheat;
+	background-color: seashell;
 	color: black;
 }
+
 
 
 
