--- a/css/style2.css
+++ b/css/style2.css
@@ -1,6 +1,6 @@
 body 
 {
-	background-color: tan;
+	background-color: maroon;
 }
 
 
@@ -9,11 +9,11 @@ ul
 	list-style-type: none;
 	margin-left: auto;
 	margin-right: auto;
-	padding: 40px; 40px;
+	padding: 30px; 30px;
 	overflow: hidden;
-	background-color: sienna;
-	width: 100%;
-	height: 10px;
+	background-color: black;
+	width: 65%;
+	height: 5px;
 }
 
 li
@@ -33,9 +33,27 @@ li a
 	
 }
 
+h1
+{
+	font-family: georgia;
+	font-size: 30 px;
+	color: white;
+	
+	
+
+}
+
+p
+{
+	font-family: centuryGothic;
+	font-size: 15px;
+	display: ruby-base-container;
+	color: white;
+	
+}
 a:hover 
 {
-	background-color: wheat;
+	background-color: seashell;
 	color: black;
 }
 
