--- a/css/style3.css
+++ b/css/style3.css
@@ -1,6 +1,6 @@
 body 
 {
-	background-color: tan;
+	background-color: maroon;
 }
 
 
@@ -9,11 +9,11 @@ ul
 	list-style-type: none;
 	margin-left: auto;
 	margin-right: auto;
-	padding: 40px; 40px;
+	padding: 30px; 30px;
 	overflow: hidden;
-	background-color: sienna;
-	width: 100%;
-	height: 10px;
+	background-color: black;
+	width: 65%;
+	height: 5px;
 }
 
 li
@@ -34,36 +34,42 @@ li a
 
 a:hover 
 {
-	background-color: wheat;
+	background-color: seashell;
 	color: black;
 }
 
+h1 
+{
+	color: white;
+}
 h2 
 {
 	font-family: Georgia;
-	color: sienna;
+	color: white;
 }
 
 p
 {
 	font-family: CenturyGothic;
+	color: white;
 }
 
 table, th, tr, td
 {
-	border: 2px solid sienna;
+	border: 2px solid black;
 	border-collapse: collapse;
+	color: white;
 }
 
 tr:hover
 {
-	background-color:wheat ;
+	background-color: black ;
 	color: black;
 }
 
 img
 {
 	border-style: solid;
-	border-color: saddlebrown;
-	border-width: 5px;
+	border-color: black;
+	border-width: 3px;
 }
