--- a/css/style5.css
+++ b/css/style5.css
@@ -1,6 +1,6 @@
 body 
 {
-	background-color: tan;
+	background-color: maroon;
 }
 
 
@@ -9,11 +9,11 @@ ul
 	list-style-type: none;
 	margin-left: auto;
 	margin-right: auto;
-	padding: 40px; 40px;
+	padding: 30px; 30px;
 	overflow: hidden;
-	background-color: sienna;
-	width: 100%;
-	height: 10px;
+	background-color: black;
+	width: 65%;
+	height: 5px;
 }
 
 li
@@ -32,9 +32,9 @@ li a
 	font-size: 20px;
 }
 
-a:hover 
+li a:hover 
 {
-	background-color: wheat;
+	background-color: seashell;
 	color: black;
 }
 
@@ -43,6 +43,11 @@ a:hover
 img
 {
 	border-style: solid;
-	border-color: saddlebrown;
-	border-width: 5px;
+	border-color: black;
+	border-width: 3px;
+}
+
+h1
+{
+	color: white;
 }
