--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body
 		{
-			background-color: maroon;
+			background-color: darkolivegreen;
 		}
 ul
 {
@@ -32,7 +32,7 @@ li a
 
 a:hover 
 {
-	background-color:seashell ;
+	background-color:olivedrab ;
 	color: black;
 }
 
