--- a/css/style1.css
+++ b/css/style1.css
@@ -1,18 +1,25 @@
 body 
 {
-	background-color: maroon;
+	background-color: darkolivegreen;
 
 }
 
 h1
 {
-	font-family: georgia;
+	font-family: Georgia;
 	font-size: 30 px;
 	color: white;
 	
-	
-
 }
+
+h2
+{
+	font-family: Georgia;
+	font-size: 25 px;
+	color: white;
+}
+
+
 
 p
 {
@@ -61,7 +68,7 @@ dt
 
 dd
 {
-	font-family: centurygothic;
+	font-family: candara;
 	text-align: center;
 	color: white;
 
@@ -69,10 +76,9 @@ dd
 
 li a:hover 
 {
-	background-color: seashell;
+	background-color: olivedrab;
 	color: black;
 }
-
 
 
 
